@@ -3,6 +3,7 @@
 * BMC: Cadical support with --cadical
 * BMC: iterative constraint strengthening is now default;
   use --bmc-with-assumptions to re-enable the previous algorithm.
+* SystemVerilog: streaming concatenation {<<{...}} and {>>{...}}
 
 # EBMC 5.3
 
